--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -8,7 +8,129 @@
   </head>
   <body>
     <div class="d-flex" id="albumPage">
-      <aside class="aside">trdhrt</aside>
+      <header class="col-2 rounded p-0">
+        <div class="rounded bg-darkness p-4 mb-2">
+          <ul class="list-unstyled d-flex flex-column gap-3 m-0">
+            <li class="align-middle">
+              <svg
+                data-encore-id="icon"
+                role="img"
+                aria-hidden="true"
+                class="Svg-sc-ytk21e-0 bneLcE home-icon QbaKKdcHNA2x3_YJvpYu"
+                viewBox="0 0 24 24"
+                style="width: 30"
+              >
+                <path
+                  fill="#B3B3B3"
+                  d="M12.5 3.247a1 1 0 0 0-1 0L4 7.577V20h4.5v-6a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v6H20V7.577l-7.5-4.33zm-2-1.732a3 3 0 0 1 3 0l7.5 4.33a2 2 0 0 1 1 1.732V21a1 1 0 0 1-1 1h-6.5a1 1 0 0 1-1-1v-6h-3v6a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.577a2 2 0 0 1 1-1.732l7.5-4.33z"
+                ></path>
+              </svg>
+              <span>Home</span>
+            </li>
+            <li class="align-middle">
+              <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" style="width: 30">
+                <path
+                  fill="#B3B3B3"
+                  d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z"
+                ></path>
+              </svg>
+              <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 30" viewBox="0 0 24 24">
+                <path
+                  d="M15.356 10.558c0 2.623-2.16 4.75-4.823 4.75-2.664 0-4.824-2.127-4.824-4.75s2.16-4.75 4.824-4.75c2.664 0 4.823 2.127 4.823 4.75z"
+                ></path>
+                <path
+                  fill="#B3B3B3"
+                  d="M1.126 10.558c0-5.14 4.226-9.28 9.407-9.28 5.18 0 9.407 4.14 9.407 9.28a9.157 9.157 0 0 1-2.077 5.816l4.344 4.344a1 1 0 0 1-1.414 1.414l-4.353-4.353a9.454 9.454 0 0 1-5.907 2.058c-5.18 0-9.407-4.14-9.407-9.28zm9.407-7.28c-4.105 0-7.407 3.274-7.407 7.28s3.302 7.279 7.407 7.279 7.407-3.273 7.407-7.28c0-4.005-3.302-7.278-7.407-7.278z"
+                ></path>
+              </svg>
+              <span>Cerca</span>
+            </li>
+          </ul>
+        </div>
+        <div class="bg-darkness rounded p-4">
+          <div class="bg-darkness">
+            <div class="d-flex">
+              <button class="btn text-white me-auto bg-darkness mb-2 p-1" style="width: 150px">
+                <span
+                  ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" style="width: 30px">
+                    <path
+                      fill="#B3B3B3"
+                      d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"
+                    ></path>
+                  </svg> </span
+                >La tua Libreria
+              </button>
+              <button class="btn text-white mx-2 bg-darkness" style="width: 40px; height: 40px">
+                <span style="display: block"
+                  ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16">
+                    <path
+                      fill="#B3B3B3"
+                      d="M15.25 8a.75.75 0 0 1-.75.75H8.75v5.75a.75.75 0 0 1-1.5 0V8.75H1.5a.75.75 0 0 1 0-1.5h5.75V1.5a.75.75 0 0 1 1.5 0v5.75h5.75a.75.75 0 0 1 .75.75z"
+                    ></path>
+                  </svg>
+                </span>
+              </button>
+              <button class="btn text-white mx-2 bg-darkness" style="width: 40px; height: 40px">
+                <span style="display: block"
+                  ><svg
+                    data-encore-id="icon"
+                    role="img"
+                    aria-hidden="true"
+                    viewBox="0 0 16 16"
+                    class="Svg-sc-ytk21e-0 cAMMLk"
+                  >
+                    <path
+                      fill="#B3B3B3"
+                      d="M7.19 1A.749.749 0 0 1 8.47.47L16 7.99l-7.53 7.521a.75.75 0 0 1-1.234-.815.75.75 0 0 1 .174-.243l5.72-5.714H.75a.75.75 0 1 1 0-1.498h12.38L7.41 1.529a.749.749 0 0 1-.22-.53z"
+                    ></path>
+                  </svg>
+                </span>
+              </button>
+            </div>
+            <div>
+              <div>
+                <div>
+                  <div class="mb-2">
+                    <button class="rounded-pill border-0 bg-black text-white px-2">
+                      <span>Playlist</span>
+                    </button>
+                    <button class="rounded-pill border-0 bg-black text-white px-2">
+                      <span>Artisti</span>
+                    </button>
+                    <button class="rounded-pill border-0 bg-black text-white px-2">
+                      <span>Album</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="scrollbar">
+            <div class="d-flex justify-content-between">
+              <button class="btn">
+                <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 15px" viewBox="0 0 16 16">
+                  <path
+                    fill="#B3B3B3"
+                    d="M7 1.75a5.25 5.25 0 1 0 0 10.5 5.25 5.25 0 0 0 0-10.5zM.25 7a6.75 6.75 0 1 1 12.096 4.12l3.184 3.185a.75.75 0 1 1-1.06 1.06L11.304 12.2A6.75 6.75 0 0 1 .25 7z"
+                  ></path>
+                </svg>
+              </button>
+              <button class="btn text-white d-flex align-items-center">
+                <span class="pe-2">Recenti</span>
+                <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                  <path
+                    fill="#B3B3B3"
+                    d="M15 14.5H5V13h10v1.5zm0-5.75H5v-1.5h10v1.5zM15 3H5V1.5h10V3zM3 3H1V1.5h2V3zm0 11.5H1V13h2v1.5zm0-5.75H1v-1.5h2v1.5z"
+                  ></path>
+                </svg>
+              </button>
+            </div>
+            <div>
+              <ul id="listaBraniArtistiAlbum" class="p-0"></ul>
+            </div>
+          </div>
+        </div>
+      </header>
 
       <main class="col-8 rounded" data-bs-theme="dark" id="main">
         <div>
@@ -341,6 +463,6 @@
       </div>
     </footer>
     <script src="./AlbumPage.js"></script>
-    <script src="path/to/color-thief.min.js"></script>
+    <script src="./lista.js"></script>
   </body>
 </html>
