aumentato padding del Main

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -132,7 +132,7 @@
         </div>
       </header>
 
-      <main class="col-8 rounded position-relative" data-bs-theme="dark" id="main">
+      <main class="col-8 rounded position-relative p-3" data-bs-theme="dark" id="main">
         <div>
           <div class="container mt-2">
             <div class="row">
