creato footer con info sull'azienda

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -347,12 +347,162 @@
                 </tr> -->
               </tbody>
             </table>
-            <div class="row">
-              <h4></h4>
-              <div class="col-3"></div>
-              <div class="col-3"></div>
-              <div class="col-3"></div>
+
+            <!-- Altre Card dell'artista -->
+            <div class="row my-5">
+              <h4 class="ms-3">Altro di</h4>
+              <div class="col-3">
+                <div class="">
+                  <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
+                    <div class="position-relative">
+                      <img
+                        class="bd-placeholder-img card-img-top object-fit-cover"
+                        src="https://e-cdns-images.dzcdn.net/images/cover/4a2497e819405074b107b3bce1d95cf9/500x500-000000-80-0-0.jpg"
+                      /><a
+                        type="button"
+                        style="width: 50px; height: 50px"
+                        class="btn btn-success rounded-circle position-absolute bottom-0 end-0 me-2 mb-2 d-flex align-items-center justify-content-center d-none"
+                        id="btnPlay"
+                        ><svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="30"
+                          height="30"
+                          fill="black"
+                          class="bi bi-play-fill"
+                          viewBox="0 0 16 16"
+                        >
+                          <path
+                            d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
+                          ></path></svg
+                      ></a>
+                    </div>
+                    <div class="card-body text-start px-0 pb-0">
+                      <h5 class="fs-5 text-truncate">Boulevard of Broken Dreams</h5>
+                      <p>Green Day</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
+                  <div class="position-relative">
+                    <img
+                      class="bd-placeholder-img card-img-top object-fit-cover"
+                      src="https://e-cdns-images.dzcdn.net/images/cover/4a2497e819405074b107b3bce1d95cf9/500x500-000000-80-0-0.jpg"
+                    /><a
+                      type="button"
+                      style="width: 50px; height: 50px"
+                      class="btn btn-success rounded-circle position-absolute bottom-0 end-0 me-2 mb-2 d-flex align-items-center justify-content-center d-none"
+                      id="btnPlay"
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        fill="black"
+                        class="bi bi-play-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
+                        ></path></svg
+                    ></a>
+                  </div>
+                  <div class="card-body text-start px-0 pb-0">
+                    <h5 class="fs-5 text-truncate">Boulevard of Broken Dreams</h5>
+                    <p>Green Day</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
+                  <div class="position-relative">
+                    <img
+                      class="bd-placeholder-img card-img-top object-fit-cover"
+                      src="https://e-cdns-images.dzcdn.net/images/cover/4a2497e819405074b107b3bce1d95cf9/500x500-000000-80-0-0.jpg"
+                    /><a
+                      type="button"
+                      style="width: 50px; height: 50px"
+                      class="btn btn-success rounded-circle position-absolute bottom-0 end-0 me-2 mb-2 d-flex align-items-center justify-content-center d-none"
+                      id="btnPlay"
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        fill="black"
+                        class="bi bi-play-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
+                        ></path></svg
+                    ></a>
+                  </div>
+                  <div class="card-body text-start px-0 pb-0">
+                    <h5 class="fs-5 text-truncate">Boulevard of Broken Dreams</h5>
+                    <p>Green Day</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
+                  <div class="position-relative">
+                    <img
+                      class="bd-placeholder-img card-img-top object-fit-cover"
+                      src="https://e-cdns-images.dzcdn.net/images/cover/4a2497e819405074b107b3bce1d95cf9/500x500-000000-80-0-0.jpg"
+                    /><a
+                      type="button"
+                      style="width: 50px; height: 50px"
+                      class="btn btn-success rounded-circle position-absolute bottom-0 end-0 me-2 mb-2 d-flex align-items-center justify-content-center d-none"
+                      id="btnPlay"
+                      ><svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="30"
+                        height="30"
+                        fill="black"
+                        class="bi bi-play-fill"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
+                        ></path></svg
+                    ></a>
+                  </div>
+                  <div class="card-body text-start px-0 pb-0">
+                    <h5 class="fs-5 text-truncate">Boulevard of Broken Dreams</h5>
+                    <p>Green Day</p>
+                  </div>
+                </div>
+              </div>
             </div>
+            <div class="col-2">
+              <h6>Azienda</h6>
+              <p class="text-secondary m-0 p-2">Chi siamo</p>
+              <p class="text-secondary m-0 p-2">Opportunita´ di lavoro</p>
+              <p class="text-secondary m-0 p-2">For the record</p>
+            </div>
+            <div class="col-2">
+              <h6>Comunity</h6>
+              <p class="text-secondary m-0 p-2">Per artisti</p>
+              <p class="text-secondary m-0 p-2">Sviluppatori</p>
+              <p class="text-secondary m-0 p-2">Pubblicita´</p>
+              <p class="text-secondary m-0 p-2">Investitori</p>
+              <p class="text-secondary m-0 p-2">Venditori</p>
+            </div>
+            <div class="col-2">
+              <h6>Link utili</h6>
+              <p class="text-secondary m-0 p-2">Assistenza</p>
+              <p class="text-secondary m-0 p-2">App per cellulare gratuita</p>
+              <p class="text-secondary m-0 p-2">Diritti del consumatore</p>
+            </div>
+            <div class="col-2">
+              <h6>Piani Spotify</h6>
+              <p class="text-secondary m-0 p-2">Premium Individual</p>
+              <p class="text-secondary m-0 p-2">Premium Duo</p>
+              <p class="text-secondary m-0 p-2">Premium Family</p>
+              <p class="text-secondary m-0 p-2">Premium Student</p>
+              <p class="text-secondary m-0 p-2">Spotify Free</p>
+            </div>
+            <div class="col-2"></div>
           </div>
         </div>
       </main>
