--- a/artists.html
+++ b/artists.html
@@ -102,10 +102,10 @@
         </header>
 
         <main class="col-8 p-0 pt-1">
-          <div id="artistBanner" class="bg-dark p-0">
-            <div id="artistTitle" class="container-fluid px-3 mt-auto">
-              <div id="verifiedArtist" class="container-fluid px-3 mb-0 mt-auto"></div>
-            </div>
+          <div id="artistBanner" class="bg-dark p-0 position-relative">
+            <!-- <div id="artistTitle" class="container-fluid px-3 mt-auto"></div>
+            <div id="verifiedArtist" class="container-fluid px-3 mb-0 mt-auto"></div> -->
+            <div id=""></div>
           </div>
           <div class="container-fluid">
             <div id="containerList" class="d-flex align-items-center">
@@ -113,7 +113,7 @@
                 class="btn btn-success rounded-circle m-4 d-flex align-items-center justify-content-center"
                 style="width: 50px; height: 50px"
               >
-                <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
                   <path
                     fill="#000000"
                     d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
@@ -142,21 +142,19 @@
                 </svg>
               </div>
             </div>
-            <div class="d-flex justify-content-between px-4 me-4 mb-4">
-              <h5>Popolari</h5>
-              <div>
-                <h5>Brani che ti piacciono</h5>
-              </div>
-            </div>
-            <div class="container">
-              <div class="row">
-                <div class="col-12 col-md-8 d-flex justify-content-between g-0 align-items-center">
-                  <!-- <div class="d-flex align-items-center"> -->
-                  <div id="songsList" class="row"></div>
-                  <!-- </div> -->
-                </div>
+            <div class="row d-flex justify-content-between px-4 me-4 mb-4">
+              <h5 class="col-12 col-md-8 mb-4">Popolari</h5>
+              <h5 class="mb-4 col-12 col-sm-4">Brani che ti piacciono</h5>
+              <div class="container">
+                <div class="row">
+                  <div class="col-12 col-md-8 d-flex justify-content-between g-0 align-items-center">
+                    <!-- <div class="d-flex align-items-center"> -->
+                    <div id="songsList" class="row"></div>
+                    <!-- </div> -->
+                  </div>
 
-                <div id="likedSongs" class="col-12 col-sm-4"></div>
+                  <div id="likedSongs" class="col-12 col-sm-4"></div>
+                </div>
               </div>
             </div>
           </div>
