cambio metodo selezione artisti e album
add un poco di parte responsive e link su artisti

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
+    <link rel="stylesheet" href="assets/css/circular-font.css" />
   </head>
   <body class="bg-black text-white container-fluid m-0" style="max-height: 100vh">
     <div class="">
@@ -168,9 +169,9 @@
                 </div>
               </div>
               <div id="perTe" class="row g-0 bg-darkness">
-                <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Create per te</a>
+                <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Artisti che ti piacciono</a>
               </div>
-              <div id="artisti" class="row g-0 bg-darkness">
+              <div id="artistaPref" class="row g-0 bg-darkness">
                 <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Artista preferito</a>
               </div>
               <div id="perOggi" class="row g-0 bg-darkness">
