--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -349,10 +349,10 @@
             </table>
 
             <!-- Altre Card dell'artista -->
-            <div class="row my-5">
-              <h4 class="ms-3">Altro di</h4>
-              <div class="col-3">
-                <div class="">
+            <h4 class="mt-5">Altro di</h4>
+            <div class="row my-5" id="altriAlbums">
+              <!-- <div class="col-3">
+                
                   <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
                     <div class="position-relative">
                       <img
@@ -381,98 +381,8 @@
                       <p>Green Day</p>
                     </div>
                   </div>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
-                  <div class="position-relative">
-                    <img
-                      class="bd-placeholder-img card-img-top object-fit-cover"
-                      src="https://e-cdns-images.dzcdn.net/images/cover/4a2497e819405074b107b3bce1d95cf9/500x500-000000-80-0-0.jpg"
-                    /><a
-                      type="button"
-                      style="width: 50px; height: 50px"
-                      class="btn btn-success rounded-circle position-absolute bottom-0 end-0 me-2 mb-2 d-flex align-items-center justify-content-center d-none"
-                      id="btnPlay"
-                      ><svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="30"
-                        height="30"
-                        fill="black"
-                        class="bi bi-play-fill"
-                        viewBox="0 0 16 16"
-                      >
-                        <path
-                          d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
-                        ></path></svg
-                    ></a>
-                  </div>
-                  <div class="card-body text-start px-0 pb-0">
-                    <h5 class="fs-5 text-truncate">Boulevard of Broken Dreams</h5>
-                    <p>Green Day</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
-                  <div class="position-relative">
-                    <img
-                      class="bd-placeholder-img card-img-top object-fit-cover"
-                      src="https://e-cdns-images.dzcdn.net/images/cover/4a2497e819405074b107b3bce1d95cf9/500x500-000000-80-0-0.jpg"
-                    /><a
-                      type="button"
-                      style="width: 50px; height: 50px"
-                      class="btn btn-success rounded-circle position-absolute bottom-0 end-0 me-2 mb-2 d-flex align-items-center justify-content-center d-none"
-                      id="btnPlay"
-                      ><svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="30"
-                        height="30"
-                        fill="black"
-                        class="bi bi-play-fill"
-                        viewBox="0 0 16 16"
-                      >
-                        <path
-                          d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
-                        ></path></svg
-                    ></a>
-                  </div>
-                  <div class="card-body text-start px-0 pb-0">
-                    <h5 class="fs-5 text-truncate">Boulevard of Broken Dreams</h5>
-                    <p>Green Day</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
-                  <div class="position-relative">
-                    <img
-                      class="bd-placeholder-img card-img-top object-fit-cover"
-                      src="https://e-cdns-images.dzcdn.net/images/cover/4a2497e819405074b107b3bce1d95cf9/500x500-000000-80-0-0.jpg"
-                    /><a
-                      type="button"
-                      style="width: 50px; height: 50px"
-                      class="btn btn-success rounded-circle position-absolute bottom-0 end-0 me-2 mb-2 d-flex align-items-center justify-content-center d-none"
-                      id="btnPlay"
-                      ><svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="30"
-                        height="30"
-                        fill="black"
-                        class="bi bi-play-fill"
-                        viewBox="0 0 16 16"
-                      >
-                        <path
-                          d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"
-                        ></path></svg
-                    ></a>
-                  </div>
-                  <div class="card-body text-start px-0 pb-0">
-                    <h5 class="fs-5 text-truncate">Boulevard of Broken Dreams</h5>
-                    <p>Green Day</p>
-                  </div>
-                </div>
-              </div>
+
+              </div> -->
             </div>
             <div class="col-2">
               <h6>Azienda</h6>
