--- a/artists.html
+++ b/artists.html
@@ -142,18 +142,20 @@
                 </svg>
               </div>
             </div>
-            <div class="row d-flex justify-content-between px-4 me-4 mb-4">
-              <h5 class="col-12 col-md-8 mb-4">Popolari</h5>
-              <h5 class="mb-4 col-12 col-sm-4">Brani che ti piacciono</h5>
+            <div class="row d-flex justify-content-between pe-2 ps-4 mb-4 me-0">
               <div class="container">
                 <div class="row">
-                  <div class="col-12 col-md-8 d-flex justify-content-between g-0 align-items-center">
+                  <div class="col-12 col-md-8 d-flex me-0 justify-content-between g-0 align-items-center">
                     <!-- <div class="d-flex align-items-center"> -->
-                    <div id="songsList" class="row"></div>
+                    <div id="songsList" class="row">
+                      <h5 class="col-12 mb-4">Popolari</h5>
+                    </div>
                     <!-- </div> -->
                   </div>
 
-                  <div id="likedSongs" class="col-12 col-sm-4"></div>
+                  <div id="likedSongs" class="col-12 col-md-4 mb-3">
+                    <h5 class="mb-4 col-12 w-100">Brani che ti piacciono</h5>
+                  </div>
                 </div>
               </div>
             </div>
