--- a/artists.html
+++ b/artists.html
@@ -307,6 +307,8 @@
     </div>
 
     <script src="./artists.js"></script>
+    <script src="./lista.js"></script>
+    <script src="./footer.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
